--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -14,7 +14,8 @@
     </mat-tab-group>
   </mat-sidenav>
   <mat-sidenav-content>
-    <button mat-raised-button color="primary" (click)="sidenavOpened = !sidenavOpened" class="rotate-button">EVENTS</button>
+    <button mat-raised-button color="primary" (click)="sidenavOpened = !sidenavOpened" class="rotate-button">EVENTS
+    </button>
     <mat-tab-group [animationDuration]="0">
       <mat-tab label="online">
         <ng-template matTabContent>
