--- a/src/app/components/all-events/all-events.component.html
+++ b/src/app/components/all-events/all-events.component.html
@@ -26,9 +26,14 @@
       <td mat-cell *matCellDef="let element"> {{element.country}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="userAgent">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> UserAgent</th>
-      <td mat-cell *matCellDef="let element"> {{element.userAgent}} </td>
+    <ng-container matColumnDef="device">
+      <th mat-header-cell *matHeaderCellDef> Device</th>
+      <td mat-cell *matCellDef="let element"> {{element.userAgent | device}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="OS">
+      <th mat-header-cell *matHeaderCellDef> OS</th>
+      <td mat-cell *matCellDef="let element"> {{element.userAgent | os}} </td>
     </ng-container>
 
     <ng-container matColumnDef="purchaseData">
