add close button

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -9,3 +9,9 @@
 .sidenav-content-with-padding {
   padding-left: 50px;
 }
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  z-index: 9999;
+}
