--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
         </ng-template>
       </mat-tab>
     </mat-tab-group>
+    <button class="close-button" mat-mini-fab (click)="sidenavOpened = !sidenavOpened" color="accent">x</button>
   </mat-sidenav>
   <mat-sidenav-content>
     <button mat-raised-button color="primary" (click)="sidenavOpened = !sidenavOpened" class="rotate-button">EVENTS
